# kmnd

./: .travis.yml  CMakeLists.txt  Kegfile  LICENSE  README.md  sample.c
include/: kmnd.h
src/: command.c  command.h  core.h  error.c  error.h  input.c  input.h  kmnd.c  log.c  option.c  option.h  path.c  path.h  terminal.c  terminal.h  usage.c  usage.h
tests/: CMakeLists.txt
tests/src/: command.cpp  error.cpp  input.cpp  malloc.c  malloc.h  option_boolean.cpp  option_double.cpp  option_float.cpp  option_int16.cpp  option_int32.cpp  option_int64.cpp  option_int8.cpp  option_string.cpp  option_uint16.cpp  option_uint32.cpp  option_uint64.cpp  option_uint8.cpp  path.cpp  terminal.cpp  usage.cpp
